# AmpMap

./: Dockerfile  INSTALL.md  MIGRATION_SUMMARY.md  Makefile  README.md  README_PROFESSIONAL.md  VERSION  ampmap  basecalling_QC_amplicon.py  basecalling_phasing_amplicon.py  docker-compose.yml  get_xml.sh  parse_phasing.py  pyproject.toml  run.sh  sample_sheet.csv  setup.py  setup_clair3.sh
.github/workflows/: ci.yml
GUI/: .dockerignore  .env.example  Dockerfile  README.md  amplicon_data.db  app.py  config.py  docker-compose-host.yml  docker-compose.yml  downloader.py  gui_ampmap.py  requirements.txt
GUI/templates/: index.html
developer/: parse_qc_results.py  run_downsample.sh  watchdog.sh
helper/: README.md  ampmap_watchdog
script/: Dockerfile  basecalling_QC_amplicon.py  basecalling_phasing_amplicon.py  get_xml.sh  localise_amplicon.py  phase_amplicon.py  phasing_variants_qc.py  quality_control.py  run.sh  variant_comparison.py
scripts/: runDown.sh
src/ont_amplicon_phase/: __init__.py  cli.py
src/ont_amplicon_phase/config/: default.yaml
src/ont_amplicon_phase/core/: __init__.py  phasing_analyzer.py  pipeline.py  qc_analyzer.py  variant_processor.py  xml_generator.py
src/ont_amplicon_phase/data/: solo_LR.xml  solo_LR_SR.xml
src/ont_amplicon_phase/utils/: __init__.py  config.py  file_utils.py  validators.py
tests/: __init__.py
tests/unit/: test_validators.py
xml_generator/: get_xml.sh  solo_LR.xml  solo_LR_SR.xml
